# minibackup

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  test_chinese.py  test_compression.py  test_filter.py  test_full_win.py  test_unittest.py
include/: BackupEngine.h  CRC32.h
src/: BackupEngine.cpp  Bridge.cpp  main.cpp
